--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.6",
     "pyyaml>=6.0",
     "httpx>=0.27",
+    "jinja2>=3.1",
 ]
 
 [project.optional-dependencies]
@@ -27,7 +28,7 @@ packages = ["app"]
 include-package-data = true
 
 [tool.setuptools.package-data]
-app = []
+app = ["templates/*.html"]
 
 [tool.pytest.ini_options]
 addopts = "-q"
