Support manual YouTube playlists in scene configs

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,3 +1,8 @@
+# Дополнительные ключи конфигурации сцен:
+#   youtube_playlist_id — строка с идентификатором плейлиста YouTube. Когда задано,
+#     фронтенд загрузит именно этот плейлист вместо выполнения поиска.
+#   youtube_video_ids — список видеороликов YouTube (ID), которые будут проиграны
+#     вручную. Если список непустой, он имеет приоритет над поиском и плейлистом.
 genres:
   fantasy:
     dynamic_defaults:
@@ -17,6 +22,7 @@ genres:
         volume: 85
         crossfade: 3
         cooldown_sec: 75
+        youtube_playlist_id: "PL9tY0BWXOZFwFantasyBattle"
         providers:
           - name: youtube_music
             description: "Поиск на YouTube Music"
@@ -29,6 +35,9 @@ genres:
         volume: 70
         crossfade: 5
         cooldown_sec: 90
+        youtube_video_ids:
+          - dQw4w9WgXcQ
+          - 5NV6Rdv1a3I
         providers:
           - name: youtube_music
             description: "Атмосферные треки таверны на YouTube Music"
